Data Wrangling Excercises (Week 7 & 8)

--- a/Data Wrangling/data_wrangling_wk _7.ipynb
+++ b/Data Wrangling/data_wrangling_wk _7.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "[1000 rows x 10 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -422,52 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating new column total_value\n",
-    "df['total_value'] = df['quantity'] * df['unit_price']\n",
-    "\n",
-    "# Extract year from production year\n",
-    "df['production_year'] = df['production_date'].dt.strftime('%Y')\n",
-    "\n",
-    "df.head(4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['product_name', 'quantity', 'unit_price', 'manufacturer',\n",
-       "       'expiration_date', 'category', 'weight', 'color', 'material',\n",
-       "       'production_date', 'total_value', 'production_year'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Data Analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -491,60 +446,277 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>product_name</th>\n",
        "      <th>quantity</th>\n",
        "      <th>unit_price</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>total_value</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
+       "      <th>manufacturer</th>\n",
+       "      <th>expiration_date</th>\n",
        "      <th>category</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>weight</th>\n",
+       "      <th>color</th>\n",
+       "      <th>material</th>\n",
+       "      <th>production_date</th>\n",
+       "      <th>total_value</th>\n",
+       "      <th>production_year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>electronics</th>\n",
-       "      <td>175384</td>\n",
-       "      <td>17972.82</td>\n",
-       "      <td>1713.42</td>\n",
-       "      <td>9087471.54</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Soup - Campbells - Chicken Noodle</td>\n",
+       "      <td>265</td>\n",
+       "      <td>6.20</td>\n",
+       "      <td>Katz</td>\n",
+       "      <td>2022-12-26</td>\n",
+       "      <td>electronics</td>\n",
+       "      <td>5.02</td>\n",
+       "      <td>Mauv</td>\n",
+       "      <td>wood</td>\n",
+       "      <td>2023-12-15</td>\n",
+       "      <td>1643.00</td>\n",
+       "      <td>2023</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>food</th>\n",
-       "      <td>176572</td>\n",
-       "      <td>17376.24</td>\n",
-       "      <td>1770.62</td>\n",
-       "      <td>8677674.10</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Wine - Sauvignon Blanc</td>\n",
+       "      <td>429</td>\n",
+       "      <td>22.53</td>\n",
+       "      <td>Meembee</td>\n",
+       "      <td>2022-12-26</td>\n",
+       "      <td>food</td>\n",
+       "      <td>5.02</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>plastic</td>\n",
+       "      <td>2022-08-31</td>\n",
+       "      <td>9665.37</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>clothing</th>\n",
-       "      <td>164695</td>\n",
-       "      <td>14833.20</td>\n",
-       "      <td>1536.04</td>\n",
-       "      <td>8400008.08</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Pasta - Cheese / Spinach Bauletti</td>\n",
+       "      <td>483</td>\n",
+       "      <td>79.70</td>\n",
+       "      <td>Skynoodle</td>\n",
+       "      <td>2022-12-26</td>\n",
+       "      <td>food</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>Puce</td>\n",
+       "      <td>metal</td>\n",
+       "      <td>2023-10-27</td>\n",
+       "      <td>38495.10</td>\n",
+       "      <td>2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Wine - Cave Springs Dry Riesling</td>\n",
+       "      <td>884</td>\n",
+       "      <td>20.51</td>\n",
+       "      <td>Centidel</td>\n",
+       "      <td>2022-12-26</td>\n",
+       "      <td>electronics</td>\n",
+       "      <td>3.90</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>plastic</td>\n",
+       "      <td>2023-01-07</td>\n",
+       "      <td>18130.84</td>\n",
+       "      <td>2023</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             quantity  unit_price   weight  total_value\n",
-       "category                                               \n",
-       "electronics    175384    17972.82  1713.42   9087471.54\n",
-       "food           176572    17376.24  1770.62   8677674.10\n",
-       "clothing       164695    14833.20  1536.04   8400008.08"
+       "                        product_name  quantity  unit_price manufacturer  \\\n",
+       "0  Soup - Campbells - Chicken Noodle       265        6.20         Katz   \n",
+       "1             Wine - Sauvignon Blanc       429       22.53      Meembee   \n",
+       "2  Pasta - Cheese / Spinach Bauletti       483       79.70    Skynoodle   \n",
+       "3   Wine - Cave Springs Dry Riesling       884       20.51     Centidel   \n",
+       "\n",
+       "  expiration_date     category  weight  color material production_date  \\\n",
+       "0      2022-12-26  electronics    5.02   Mauv     wood      2023-12-15   \n",
+       "1      2022-12-26         food    5.02    Red  plastic      2022-08-31   \n",
+       "2      2022-12-26         food    0.50   Puce    metal      2023-10-27   \n",
+       "3      2022-12-26  electronics    3.90  Green  plastic      2023-01-07   \n",
+       "\n",
+       "   total_value production_year  \n",
+       "0      1643.00            2023  \n",
+       "1      9665.37            2022  \n",
+       "2     38495.10            2023  \n",
+       "3     18130.84            2023  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby(['category'], sort = False).sum(['quantity'])"
+    "# Creating new column total_value\n",
+    "df['total_value'] = df['quantity'] * df['unit_price']\n",
+    "\n",
+    "# Extract year from production year\n",
+    "df['production_year'] = df['production_date'].dt.strftime('%Y')\n",
+    "\n",
+    "df.head(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['product_name', 'quantity', 'unit_price', 'manufacturer',\n",
+       "       'expiration_date', 'category', 'weight', 'color', 'material',\n",
+       "       'production_date', 'total_value', 'production_year'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Group the data by category and calculate the total quantity and total value for each category.\n",
+    "Find the top 5 most expensive products based on unit_price.\n",
+    "Calculate the average weight of products for each manufacturer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "category\n",
+       "food           176572\n",
+       "electronics    175384\n",
+       "clothing       164695\n",
+       "Name: quantity, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Total Quantity per category\n",
+    "\n",
+    "df.groupby('category')['quantity'].sum().sort_values(ascending=False)\n",
+    "\n",
+    "#Food items has the highest quantity of 176572"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "category\n",
+       "electronics    9087471.54\n",
+       "food           8677674.10\n",
+       "clothing       8400008.08\n",
+       "Name: total_value, dtype: float64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Total Quantity per total value\n",
+    "\n",
+    "df.groupby('category')['total_value'].sum().sort_values(ascending=False)\n",
+    "\n",
+    "#Food items has the highest quantity of 9087471.54"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "product_name\n",
+       "Pineapple - Canned, Rings    99.91\n",
+       "Pork - Side Ribs             99.84\n",
+       "Bag - Regular Kraft 20 Lb    99.68\n",
+       "Cafe Royale                  99.64\n",
+       "Bread - Pain Au Liat X12     99.62\n",
+       "Name: unit_price, dtype: float64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Top 5 most expensive products based on unit price\n",
+    "\n",
+    "df.groupby('product_name')['unit_price'].max().sort_values(ascending=False).head(5)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "manufacturer\n",
+       "Viva            10.000000\n",
+       "Fivebridge       9.800000\n",
+       "BlogXS           9.600000\n",
+       "Devify           9.500000\n",
+       "Bubblemix        9.266667\n",
+       "                  ...    \n",
+       "Voonder          1.000000\n",
+       "Eimbee           0.800000\n",
+       "Kaymbo           0.700000\n",
+       "Chatterpoint     0.500000\n",
+       "Zoombox          0.500000\n",
+       "Name: weight, Length: 352, dtype: float64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Average weight of product by manufacturer name.\n",
+    "\n",
+    "df.groupby('manufacturer')['weight'].mean().sort_values(ascending=False)\n",
+    "\n"
    ]
   },
   {
@@ -556,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
