--- a/Data Wrangling/data_wrangling_wk _7.ipynb
+++ b/Data Wrangling/data_wrangling_wk _7.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,9 +364,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "product_name         0\n",
+      "quantity             0\n",
+      "unit_price           0\n",
+      "manufacturer         0\n",
+      "expiration_date    797\n",
+      "category             0\n",
+      "weight             219\n",
+      "color                0\n",
+      "material             0\n",
+      "production_date      0\n",
+      "dtype: int64\n",
+      "\n",
+      "\n",
+      "DF Mean Weight Description \n",
+      "count    1000.000000\n",
+      "mean        5.020080\n",
+      "std         2.497854\n",
+      "min         0.100000\n",
+      "25%         3.300000\n",
+      "50%         5.020000\n",
+      "75%         6.800000\n",
+      "max        10.000000\n",
+      "Name: weight, dtype: float64, \n",
+      "\n",
+      "DF Median Weight Description \n",
+      "count    1000.000000\n",
+      "mean        5.015700\n",
+      "std         2.497868\n",
+      "min         0.100000\n",
+      "25%         3.300000\n",
+      "50%         5.000000\n",
+      "75%         6.800000\n",
+      "max        10.000000\n",
+      "Name: weight, dtype: float64,     \n",
+      "\n",
+      "DF Mode Weight Description \n",
+      " count    1000.000000\n",
+      "mean        4.796700\n",
+      "std         2.533266\n",
+      "min         0.100000\n",
+      "25%         3.300000\n",
+      "50%         4.000000\n",
+      "75%         6.800000\n",
+      "max        10.000000\n",
+      "Name: weight, dtype: float64, \n",
+      "\n",
+      "DF Weight with NAs Description \n",
+      "count    781.000000\n",
+      "mean       5.020102\n",
+      "std        2.826848\n",
+      "min        0.100000\n",
+      "25%        2.600000\n",
+      "50%        5.000000\n",
+      "75%        7.400000\n",
+      "max       10.000000\n",
+      "Name: weight, dtype: float64\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column           Non-Null Count  Dtype         \n",
+      "---  ------           --------------  -----         \n",
+      " 0   product_name     1000 non-null   object        \n",
+      " 1   quantity         1000 non-null   int64         \n",
+      " 2   unit_price       1000 non-null   float64       \n",
+      " 3   manufacturer     1000 non-null   object        \n",
+      " 4   expiration_date  203 non-null    datetime64[ns]\n",
+      " 5   category         1000 non-null   object        \n",
+      " 6   weight           1000 non-null   float64       \n",
+      " 7   color            1000 non-null   object        \n",
+      " 8   material         1000 non-null   object        \n",
+      " 9   production_date  1000 non-null   datetime64[ns]\n",
+      "dtypes: datetime64[ns](2), float64(2), int64(1), object(5)\n",
+      "memory usage: 78.3+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "# Data Cleaning \n",
     "\n",
@@ -587,15 +667,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Group the data by category and calculate the total quantity and total value for each category.\n",
-    "Find the top 5 most expensive products based on unit_price.\n",
-    "Calculate the average weight of products for each manufacturer."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Data Analysis"
    ]
   },
@@ -657,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +743,7 @@
        "Name: unit_price, dtype: float64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,20 +805,6 @@
    "source": [
     "df.to_csv('Cleaned Factory Data.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
