--- a/Data Wrangling/data_wrangling_wk_8.ipynb
+++ b/Data Wrangling/data_wrangling_wk_8.ipynb
@@ -2,40 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Date      | Time   | Shift   | invoice number    | Table   | Waiter Number   | Waiter name   | Item Code   | Item Name          | Qty   | Price/Unit   | Total   |\n",
-      "|:----------|:-------|:--------|:------------------|:--------|:----------------|:--------------|:------------|:-------------------|:------|:-------------|:--------|\n",
-      "| 9/28/2023 | 00:05  | Night   | FcB 0003-00000408 | 1       | 302             | PABLO         | 501         | Pizza Mozzarella   | 1     | 2500         | 2500    |\n",
-      "| 9/28/2023 | 00:05  | Night   | FcB 0003-00000408 | 1       | 302             | PABLO         | 1002        | Pinta Artesanal HH | 4     | 800          | 3200    |\n",
-      "| 9/28/2023 | 00:17  | Night   | FcB 0003-00000411 | 1       | 302             | PABLO         | 501         | Pizza Mozzarella   | 1     | 2500         | 2500    |\n",
-      "| 9/28/2023 | 00:17  | Night   | FcB 0003-00000411 | 1       | 302             | PABLO         | 1002        | Pinta Artesanal HH | 2     | 800          | 1600    |\n",
-      "| 9/28/2023 | 00:17  | Night   | FcB 0003-00000411 | 1       | 302             | PABLO         | 102         | Papas Magia        | 1     | 2500         | 2500    |\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 195 entries, 0 to 194\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   Date            195 non-null    object \n",
-      " 1   Time            195 non-null    object \n",
-      " 2   Shift           195 non-null    object \n",
-      " 3   invoice number  195 non-null    object \n",
-      " 4   Table           195 non-null    object \n",
-      " 5   Waiter Number   195 non-null    int64  \n",
-      " 6   Waiter name     195 non-null    object \n",
-      " 7   Item Code       195 non-null    int64  \n",
-      " 8   Item Name       195 non-null    object \n",
-      " 9   Qty             195 non-null    int64  \n",
-      " 10  Price/Unit      195 non-null    float64\n",
-      " 11  Total           195 non-null    float64\n",
-      "dtypes: float64(2), int64(3), object(7)\n",
-      "memory usage: 18.4+ KB\n",
-      "None\n"
+      "https://drive.google.com/uc?id=view?usp=drive_link\n"
      ]
     }
    ],
@@ -44,7 +18,9 @@
     "\n",
     "# Read the CSV file into a DataFrame\n",
     "url =  \"https://drive.google.com/file/d/1_RBqno4cu9kov98d2S13Ko9mPexp3gtM/view?usp=drive_link\" # insert URL here\n",
-    "url = 'https://drive.google.com/uc?id=' + url.split('/')[-2]\n",
+    "url2 = 'https://drive.google.com/uc?id=' + url.split('/')[-2]\n",
+    "\n",
+    "print(url2)\n",
     "\n",
     "df = pd.read_csv(url)\n",
     "\n",
@@ -52,7 +28,8 @@
     "print(df.head().to_markdown(index=False, numalign=\"left\", stralign=\"left\"))\n",
     "\n",
     "# Print the column names and their data types\n",
-    "print(df.info())"
+    "print(df.info())\n",
+    "\n"
    ]
   },
   {
@@ -70,18 +47,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Item Name\n",
-       "Combo Fernet    8500.0\n",
+       "Combo Fernet            8500.0\n",
+       "Sandwich Gringo         3500.0\n",
+       "Sandwichs Héroes        3500.0\n",
+       "Sandwich Especial       3500.0\n",
+       "Pizza Serrana           3500.0\n",
+       "Pizza 4 Quesos          3325.0\n",
+       "Pizza Especial          3100.0\n",
+       "Pizza Napolitana        3000.0\n",
+       "Pizza Serrana Veggie    2800.0\n",
+       "Sandwich Bondiola       2600.0\n",
        "Name: Price/Unit, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,24 +75,117 @@
    "source": [
     "# What is their most expensive item?\n",
     "\n",
-    "df.groupby('Item Name')['Price/Unit'].max().sort_values(ascending = False).head(1)\n",
+    "df.groupby('Item Name')['Price/Unit'].max().sort_values(ascending = False).head(10)\n",
     "\n",
     "# Combo Fernet is the most expensive item with 8500 price/unit.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>invoice number</th>\n",
+       "      <th>Table</th>\n",
+       "      <th>Waiter Number</th>\n",
+       "      <th>Waiter name</th>\n",
+       "      <th>Item Code</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Qty</th>\n",
+       "      <th>Price/Unit</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shift</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Night</th>\n",
+       "      <td>195</td>\n",
+       "      <td>195</td>\n",
+       "      <td>195</td>\n",
+       "      <td>195</td>\n",
+       "      <td>195</td>\n",
+       "      <td>195</td>\n",
+       "      <td>195</td>\n",
+       "      <td>195</td>\n",
+       "      <td>195</td>\n",
+       "      <td>195</td>\n",
+       "      <td>195</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Date  Time  invoice number  Table  Waiter Number  Waiter name  \\\n",
+       "Shift                                                                  \n",
+       "Night   195   195             195    195            195          195   \n",
+       "\n",
+       "       Item Code  Item Name  Qty  Price/Unit  Total  \n",
+       "Shift                                                \n",
+       "Night        195        195  195         195    195  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('Shift').count()"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "turn 1\n",
+    "User_query: When is the busiest time of day for the restaurant?\n",
+    "\n",
+    "FileMetadata:\n",
+    "\n",
+    "file_name: \"Waiters Cash_Sales -.csv\"\n",
+    "\n",
+    "file_path: \"https://drive.google.com/file/d/1_RBqno4cu9kov98d2S13Ko9mPexp3gtM/view?usp=drive_link\"\n",
+    "\n",
+    "Capability: Simple dataset exploration"
+   ]
   }
  ],
  "metadata": {
